fix image overflow and alignment

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -41,3 +41,9 @@
     }
   }
 }
+
+.pin-card-lg {
+  .card-title {
+    text-align: center;
+  }
+}
