--- a/app/assets/stylesheets/styling.css
+++ b/app/assets/stylesheets/styling.css
@@ -4,6 +4,10 @@ body, html
     font-family: 'Lato', sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .intro
 {
     text-align: center;
